@@ -1,5 +1,7 @@
 
 7.91  2018-08-09
+  - Fixed a bug in Mojo::IOLoop::Stream where is_readable could not be called
+    after a timeout event.
 
 7.90  2018-08-08
   - Deprecated expect_close attribute in Mojo::Content.
